--- a/map_beta.html
+++ b/map_beta.html
@@ -1,32 +1,65 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <title> Ver.1.2</title>
-    <style>
-        :root { --bg: #0f0f0f; --accent: #58a6ff; }
-        body { margin: 0; background: var(--bg); color: #fff; font-family: 'Helvetica Neue', Arial, sans-serif; overflow: hidden; }
-        header { height: 50px; padding: 0 15px; background: rgba(0,0,0,0.9); display: flex; align-items: center; border-bottom: 1px solid #333; position: fixed; top: 0; width: 100%; z-index: 1000; }
-        .map-wrapper { position: absolute; top: 50px; bottom: 0; left: 0; right: 0; overflow: auto; -webkit-overflow-scrolling: touch; background: #000; }
-        .map-content { position: relative; width: 1200px; height: 675px; }
-        .map-img { position: absolute; top: 0; left: 0; width: 1200px; height: 675px; display: block; pointer-events: none; }
-        .train { position: absolute; width: 26px; height: 16px; border-radius: 2px; border: 1.5px solid #fff; transform: translate(-50%, -50%); z-index: 100; transition: all 1.5s cubic-bezier(0.4, 0, 0.2, 1); box-shadow: 0 0 10px rgba(0,0,0,0.8); display: flex; align-items: center; justify-content: center; }
-        .train-label { position: absolute; top: 50%; transform: translateY(-50%); background: rgba(0,0,0,0.85); color: #fff; padding: 2px 7px; border-radius: 4px; font-size: 10px; font-weight: bold; white-space: nowrap; display: flex; flex-direction: row; align-items: center; gap: 5px; border: 1px solid #444; pointer-events: none; z-index: 110; }
-        .label-nobori { right: 100%; margin-right: 8px; }
-        .label-kudari { left: 100%; margin-left: 8px; }
-        .delay-text { color: #ff4444; font-weight: 900; }
-        .car-model { color: #00ffcc; font-size: 9px; }
-        .unyo-no { color: #ffeb3b; }
-        .car-sr { color: #aaa; font-size: 9px; } 
-        .dest-text { color: #fff; background: #333; padding: 0 3px; border-radius: 2px; } 
-        .sy-1 { background-color: #ff4c7c; }
-        .sy-2 { background-color: #00b66a; }
-        .sy-3 { background-color: #0082ff; }
-        .sy-5 { background-color: #d8d100; color: #000; }
-        .sy-6 { background-color: #888; }
-        .sy-9, .sy-11 { background-color: #c71585; }
-    </style>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1.0" />
+<title> Ver.1.3</title>
+<style>
+:root { --bg: #0f0f0f; --accent: #58a6ff; }
+body { margin: 0; background: var(--bg); color: #fff; font-family: 'Helvetica Neue', Arial, sans-serif; overflow: hidden; }
+
+header {
+    height: 50px; padding: 0 15px; background: rgba(0,0,0,0.9);
+    display: flex; align-items: center; border-bottom: 1px solid #333;
+    position: fixed; top: 0; width: 100%; z-index: 1000;
+}
+
+.map-wrapper {
+    position: absolute; top: 50px; bottom: 0; left: 0; right: 0;
+    overflow: auto; -webkit-overflow-scrolling: touch; background: #000;
+}
+
+.map-content { position: relative; width: 1200px; height: 675px; }
+.map-img { position: absolute; top: 0; left: 0; width: 1200px; height: 675px; display: block; pointer-events: none; }
+
+.train {
+    position: absolute; width: 26px; height: 16px;
+    border-radius: 2px; border: 1.5px solid #fff;
+    transform: translate(-50%, -50%); z-index: 100;
+    transition: all 1.5s cubic-bezier(0.4, 0, 0.2, 1);
+    box-shadow: 0 0 10px rgba(0,0,0,0.8);
+    display: flex; align-items: center; justify-content: center;
+}
+
+.train-label {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    background: rgba(0,0,0,0.85); color: #fff;
+    padding: 2px 7px; border-radius: 4px;
+    font-size: 10px; font-weight: bold; white-space: nowrap;
+    display: flex; flex-direction: row; align-items: center; gap: 5px; 
+    border: 1px solid #444;
+    pointer-events: none;
+    z-index: 110;
+}
+
+.label-nobori { right: 100%; margin-right: 8px; }
+.label-kudari { left: 100%; margin-left: 8px; }
+
+.delay-text { color: #ff4444; font-weight: 900; }
+.car-model { color: #00ffcc; font-size: 9px; }
+.unyo-no { color: #ffeb3b; }
+.car-sr { color: #aaa; font-size: 9px; } 
+.dest-text { color: #fff; background: #333; padding: 0 3px; border-radius: 2px; } 
+
+.sy-1 { background-color: #ff4c7c; }
+.sy-2 { background-color: #00b66a; }
+.sy-3 { background-color: #0082ff; }
+.sy-5 { background-color: #d8d100; color: #000; }
+.sy-6 { background-color: #888; }
+.sy-9, .sy-11 { background-color: #c71585; }
+</style>
 </head>
 <body>
 
@@ -45,9 +78,8 @@
 
 <script>
 const FEED_URL = "https://i.opentidkeio.jp/data/traffic_info.json";
-const UNYO_TXT_URL = "unyo/h/8R.txt";
 
-// 座標データ（中略：そのまま使用してください）
+// --- 座標リスト省略（あなたの既存posCoordsをここにコピー） ---
 const posCoords = {
     "E001_1": {x: 149, y: 135}, "E001_2": {x: 149, y: 163}, "E001_3": {x: 149, y: 191},
     "D002":   {x: 366, y: 163}, "U001":   {x: 366, y: 191},
@@ -88,71 +120,78 @@ const posCoords = {
     "E016_1": {x: 789, y: 483}, "E016_1S":{x: 789, y: 483}, "E016_2": {x: 789, y: 511}, "E016_2S":{x: 789, y: 511}, "E016_3": {x: 789, y: 537}, "E016_4": {x: 789, y: 566}
 };
 
-let unyoMap8R = {}; // 8R.txtの内容を格納する用
-
-// 8R.txtを取得して解析する関数
-async function fetchUnyoData() {
-    try {
-        const res = await fetch(UNYO_TXT_URL + "?" + Date.now());
-        const text = await res.text();
-        const lines = text.split('\n');
-        let currentTrains = [];
-        const newMap = {};
-
-        lines.forEach(line => {
-            const trimmed = line.trim();
-            if (trimmed.startsWith('［')) {
-                // 列番リストの抽出: 「［5600,5001...］」から中身を取り出す
-                currentTrains = trimmed.replace(/[［］]/g, '').split(',');
-            } else if (trimmed.startsWith('=')) {
-                // 運行番号の抽出: 「=12K」から「12K」を取り出す
-                const unyoName = trimmed.substring(1);
-                currentTrains.forEach(tr => {
-                    if (tr) newMap[tr] = unyoName;
-                });
-                currentTrains = [];
-            }
-        });
-        unyoMap8R = newMap;
-    } catch (e) {
-        console.error("Unyo file load error:", e);
-    }
-}
-
+// --- 車両形式 ---
 function getCarModel(sk) {
     const models = { "2":"2000", "5":"5000", "7":"7000", "8":"8000", "9":"9000", "0":"10-300" };
     return models[String(sk)] || "";
 }
 
+// --- 行先 ---
 function getDestName(ik) {
     const destMap = {
         "001":"新", "033":"N", "002":"笹", "003":"明", "006":"桜", "010":"烏", "012":"つ", "016":"調",
         "018":"飛", "021":"東", "022":"府", "027":"高", "031":"北", "032":"八", "036":"馬", "037":"動",
         "042":"尾", "043":"山", "048":"若", "050":"セ", "052":"沢", "054":"橋", "101":"市", "107":"岩",
-        "112":"住", "114":"島", "118":"瑞", "120":"本", "000":"終"
+        "112":"住", "114":"島", "118":"瑞", "120":"本", "000":"<当駅止まり>"
     };
     return destMap[String(ik)] || ik;
 }
 
-// 運行番号を特定する
-function getUnyoNo(trNo) {
-    const trStr = String(trNo);
-    // 1. 8R.txt から検索
-    if (unyoMap8R[trStr]) return unyoMap8R[trStr];
-    
-    // 2. もし unyo_kt.js (data変数) があればそこから検索
-    if (typeof data !== 'undefined') {
-        for (const [unyoName, trainList] of Object.entries(data)) {
-            if (trainList.includes(trStr)) return unyoName;
-        }
-    }
-    return "--";
+// --- 運用データ（unyoData + 8Rを統合するための空オブジェクト） ---
+window.trToUnyo = {};
+window.trToNext = {};
+
+// --- 既存unyoDataを登録（あなたの既存unyoDataをここにコピー） ---
+for (const [unyo, list] of Object.entries(unyoData)) {
+    list.forEach((tr, i) => {
+        const trStr = String(tr).toUpperCase();
+        const trNum = String(parseInt(tr));
+        window.trToUnyo[trStr] = unyo;
+        window.trToNext[trStr] = list[i + 1] ?? null;
+        window.trToUnyo[trNum] = unyo;
+        window.trToNext[trNum] = list[i + 1] ?? null;
+    });
 }
 
-async function update() {
-    // 毎回最新の8R.txtも読み込む（必要に応じて頻度を調整してください）
-    await fetchUnyoData();
+// --- 8R.txt 読み込み ---
+async function load8R() {
+    try {
+        const res = await fetch('unyo/h/8R.txt');
+        const text = await res.text();
+        const lines = text.split('\n').map(l => l.trim()).filter(l => l);
 
+        let currentUnyo = null;
+        for (let line of lines) {
+            const m = line.match(/^=(\d+K)$/);
+            if (m) { currentUnyo = m[1]; continue; }
+
+            const arrMatch = line.match(/^\[([0-9A-Za-z,\s]+)\]$/);
+            if (arrMatch && currentUnyo) {
+                const trList = arrMatch[1].split(',').map(v => v.trim());
+                trList.forEach((tr, i) => {
+                    const trStr = String(tr).toUpperCase();
+                    const trNum = String(parseInt(tr));
+                    window.trToUnyo[trStr] = currentUnyo;
+                    window.trToNext[trStr] = trList[i + 1] ?? null;
+                    window.trToUnyo[trNum] = currentUnyo;
+                    window.trToNext[trNum] = trList[i + 1] ?? null;
+                });
+            }
+        }
+        console.log('8R運用データ読み込み完了');
+    } catch(e) { console.error('8R運用データ読み込みエラー:', e); }
+}
+
+// --- 運用番号取得 ---
+function getUnyoFromJS(trNo) {
+    const t = String(trNo).toUpperCase();
+    if (window.trToUnyo[t]) return window.trToUnyo[t];
+    const tnum = String(parseInt(trNo));
+    return window.trToUnyo[tnum] || "--";
+}
+
+// --- 列車表示更新 ---
+async function update() {
     try {
         const res = await fetch(FEED_URL + "?" + Date.now());
         const json = await res.json();
@@ -166,54 +205,60 @@ async function update() {
                 if (!p.tr) return;
                 const key = p.bs ? `${st.id}_${p.bs}` : st.id;
                 const base = posCoords[key] || posCoords[st.id];
+                if (!base) return;
 
-                if (base) {
-                    activeIds.add(p.tr);
-                    const cKey = `${base.x}_${base.y}`;
-                    const offset = (posCounter[cKey] || 0) * 10;
-                    posCounter[cKey] = (posCounter[cKey] || 0) + 1;
+                activeIds.add(p.tr);
+                const cKey = `${base.x}_${base.y}`;
+                const offset = (posCounter[cKey] || 0) * 10;
+                posCounter[cKey] = (posCounter[cKey] || 0) + 1;
 
-                    let el = document.getElementById(`tr-${p.tr}`);
-                    if (!el) {
-                        el = document.createElement('div');
-                        el.id = `tr-${p.tr}`;
-                        el.className = 'train';
-                        layer.appendChild(el);
-                    }
-                    
-                    el.className = `train sy-${p.sy || '6'}`;
-                    el.style.left = `${base.x + offset}px`;
-                    el.style.top = `${base.y}px`;
-
-                    const model = getCarModel(p.sk);
-                    const unyo = getUnyoNo(p.tr); // 修正した検索関数
-                    const dest = getDestName(p.ik_tr);
-                    const sr = p.sr ? `${p.sr}両` : "";
-                    const delayHtml = (p.dl && parseInt(p.dl) > 0) ? `<span class="delay-text">+${p.dl}</span>` : "";
-                    const dirClass = (String(p.ki) === "1") ? "label-nobori" : "label-kudari";
-
-                    el.innerHTML = `
-                        <div class="train-label ${dirClass}">
-                            <span class="car-model">${model}</span>
-                            <span class="unyo-no">${unyo}</span>
-                            <span class="car-sr">${sr}</span>
-                            <span class="dest-text">${dest}</span>
-                            <span>${p.tr}</span>
-                            ${delayHtml}
-                        </div>`;
+                let el = document.getElementById(`tr-${p.tr}`);
+                if (!el) {
+                    el = document.createElement('div');
+                    el.id = `tr-${p.tr}`;
+                    el.className = 'train';
+                    layer.appendChild(el);
                 }
+
+                el.className = `train sy-${p.sy || '6'}`;
+                el.style.left = `${base.x + offset}px`;
+                el.style.top = `${base.y}px`;
+
+                const model = getCarModel(p.sk);
+                const unyo = getUnyoFromJS(p.tr);
+                const dest = getDestName(p.ik_tr);
+                const sr = p.sr ? `${p.sr}両` : "";
+                const delayHtml = (p.dl && parseInt(p.dl) > 0) ? `<span class="delay-text">+${p.dl}</span>` : "";
+                const dirClass = (String(p.ki) === "1") ? "label-nobori" : "label-kudari";
+
+                el.innerHTML = `
+                    <div class="train-label ${dirClass}">
+                        <span class="car-model">${model}</span>
+                        <span class="unyo-no">${unyo}</span>
+                        <span class="car-sr">${sr}</span>
+                        <span class="dest-text">${dest}</span>
+                        <span>${p.tr}</span>
+                        ${delayHtml}
+                    </div>`;
             });
         });
 
         document.querySelectorAll('.train').forEach(el => {
             if (!activeIds.has(el.id.replace('tr-', ''))) el.remove();
         });
+
         document.getElementById('status').textContent = "最終更新: " + new Date().toLocaleTimeString();
-    } catch (e) { console.error(e); }
+
+    } catch(e) { console.error(e); }
 }
 
-setInterval(update, 20000);
-update();
+// --- 初期化 ---
+(async () => {
+    await load8R();   // 8Rデータ読み込み完了後にupdate開始
+    update();
+    setInterval(update, 20000);
+})();
 </script>
+
 </body>
 </html>
