--- a/map_beta.html
+++ b/map_beta.html
@@ -129,7 +129,7 @@ function getDestName(ik) {
         "001":"新", "033":"N", "002":"笹", "003":"明", "006":"桜", "010":"烏", "012":"つ", "016":"調",
         "018":"飛", "021":"東", "022":"府", "027":"高", "031":"北", "032":"八", "036":"馬", "037":"動",
         "042":"尾", "043":"山", "048":"若", "050":"セ", "052":"沢", "054":"橋", "101":"市", "107":"岩",
-        "112":"住", "114":"島", "118":"瑞", "120":"本", "000":"終"
+        "112":"住", "114":"島", "118":"瑞", "120":"本", "000":"--", "301":"新宿始発 本八幡方面"
     };
     return destMap[String(ik)] || ik;
 }
