--- a/map_beta.html
+++ b/map_beta.html
@@ -38,7 +38,7 @@
             color: #fff;
             padding: 2px 5px;
             border-radius: 2px;
-            font-size: 12px;
+            font-size: 10px;
             font-weight: 300;
             line-height: 1.1;
             white-space: nowrap;
@@ -65,7 +65,7 @@
 
 <header>
     <a href="index.html" style="color:var(--accent); text-decoration:none; margin-right:15px; font-size:13px;">← 一覧に戻る</a>
-    <h1 style="font-size:13px; margin:0; font-weight:300;">京王線 リアルタイム配線図 (新宿-明大前)</h1>
+    <h1 style="font-size:13px; margin:0; font-weight:300;">v1.56</h1>
     <div id="status" style="margin-left:auto; font-size:10px; color:#aaa;">接続中...</div>
 </header>
 
