--- a/map_beta.html
+++ b/map_beta.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <title>京王線 リアルタイム配線図 Ver.1.31</title>
+    <title>Ver.1.31</title>
     <style>
         :root { --bg: #0f0f0f; --accent: #58a6ff; }
         body { margin: 0; background: var(--bg); color: #fff; font-family: 'Helvetica Neue', Arial, 'Hiragino Sans', sans-serif; overflow: hidden; }
@@ -34,12 +34,12 @@
             left: 50%;
             top: -34px; 
             transform: translateX(-50%);
-            background: rgba(0,0,0,0.75);
+            background: rgba(0,0,0,0.65);
             color: #fff;
             padding: 2px 5px;
             border-radius: 2px;
             font-size: 10px;
-            font-weight: 300;
+            font-weight: 400;
             line-height: 1.1;
             white-space: nowrap;
             display: flex;
@@ -50,7 +50,7 @@
         }
 
         .label-row { display: flex; gap: 4px; }
-        .delay-text { color: #ff4444; font-weight: 700; }
+        .delay-text { color: #ff4444; font-weight: 550; }
         .car-model { color: #00ffcc; font-size: 7.5px; }
 
         .sy-1 { background-color: #ff4c7c; }
